Finished networking code

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,4 +1,5 @@
 [flake8]
 
-# Black formatter default length
-max-line-length = 88
+# Note that Black formatter default length is 88.
+# This is just increased for flake8 to allow for occasional long lines.
+max-line-length = 120
